--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
   <body>
     <div class="container">
       <h2>Memory Game</h2>
+      <h2>Memory Game</h2>
+      <h2>Memory Game</h2>
       <div class="game"></div>
       <button class="reset" onclick="resetGame()">Reset</button>
       <p>Attempts: <span id="attempts">0</span></p>
